# context_engine

./: .cursorignore  .dockerignore  .env.example  .env.lightrag-deploy.example  .env.lightrag-provider.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  users.yaml
.cursor-plugin/: plugin.json
.data/: test_context_engine.db
.prompts/: add-lightrag-deployment-to-context-engine.md  architecture-and-integration-agent.md  cli-build.md  cli-interactive-build.md  codebase-reviewer.md  redundancy-hunt.md  refine-lightrag-integration-plan.md  review-docs-compare-to-codebase.md  senior-architect-codebase-reviewer.md  update-documentation-context-engine-change.md
.understand-anything/: domain-graph.json  knowledge-graph.json
app/: __init__.py  main.py  seed.py
cli/: __init__.py  api_client.py  config.py  credentials.py  launcher.py  main.py  query_payload.py  retrieve_payload.py
client/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
context_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
design/: context_engine_agent_ui_guidelines.md  context_engine_agent_ui_guidelines_preview.html
docker/: lightrag.Dockerfile  postgres.Dockerfile
docs/: API_CONTRACTS.md  ARCHITECTURE_CURRENT.md  ARCHITECTURE_TARGET.md  DATABASE_OWNERSHIP.md  DOCUMENT_UPLOAD_WORKFLOW.md  DOMAIN_LIFECYCLE.md  NEXT_PHASE_IMPLEMENTATION_HANDOFF.md  OPERATIONS_VISIBILITY.md  PROVIDER_CONFIG.md  architecture.md  deployment.md  todos.md  (+7 more)
(+1042 files in other folders)
